--- a/Valley/Views/Home/Index.cshtml
+++ b/Valley/Views/Home/Index.cshtml
@@ -2,12 +2,15 @@
 }
 
 <div>
-    <canvas id="myChart"></canvas>
+    <canvas id="myChart"></canvas><br />
 </div>
 
 <div class="text-center">
         <h1 class="display-4">Enter values</h1><br />
-        <form class="layui-form" asp-action="GetInfo" data-ajax-success="OnSuccess" data-ajax="true" data-ajax-method="POST">
+        <form class="layui-form" asp-action="GetData" data-ajax-success="OnSuccess" data-ajax="true" data-ajax-method="POST">
+            <div>
+                <a id="failMessage" style="color: red"></a><br />
+            </div>
             <div style="width: 100%; height: 600px;">
                 <span>Function: y= </span>
                     <input name="A" size="2" pattern="^[-,0-9]+$" title="Введите число" required>
@@ -27,9 +30,6 @@
                 <input type="submit">
             </div>
         </form>
-        <div>
-            <a id="failMessage"></a>
-        </div>
     </div>
 
 
